<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id">channelId</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="label_download_glide">Glide - Image loading Library by BumpTech</string>
    <string name="label_download_load_app">LoadApp - Current repository by Udacity</string>
    <string name="label_download_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="label_button_download">Download</string>
    <string name="label_no_selection_error">Please select the file to download</string>
    <string name="label_file_name">File name:</string>
    <string name="label_status">Status:</string>
</resources>
